# mini-rust-projects

./: LICENSE  README.md
blockchain/: Cargo.toml  README.md
blockchain/src/: blockchain.rs  main.rs
bootcamp/auth_service/src/: auth_utils.rs  database.rs  lib.rs  main.rs
bootcamp/box_smart_pointer/src/: main.rs
bootcamp/const-static/src/: main.rs
bootcamp/generics/src/: main.rs
bootcamp/my_package/src/: main.rs
bootcamp/rc_smart_pointer/src/: main.rs
bootcamp/traits/src/: main.rs
chat/: README.md
chat/client/src/: main.rs
cli_exercises/cli_err_handlings/: Cargo.toml
cli_exercises/cli_progressbar/: Cargo.toml
cli_exercises/cli_with_clap/: Cargo.toml  notes.md
cli_exercises/grrs/: Cargo.toml
cli_exercises/outputs/: Cargo.toml
containerization_with_docker/: README.md
containerization_with_docker/hello-flask-main/: Dockerfile  README.md  hello.py
containerization_with_docker/rust_docker_app/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
ip_sniffer/: readme.md
ip_sniffer/src/: main.rs
snake/: README.md
snake/src/: draw.rs  game.rs  main.rs  snake.rs
wasm_snake/: Cargo.toml
wasm_snake/src/: canvas.rs  direction.rs  main.rs
wasm_snake/static/: index.html
web_development/backend/: Cargo.toml
web_development/example2/rust-axum-intro/: Cargo.toml
web_development/example2/rust-axum-intro/src/: main.rs
web_development/example2/rust-axum-intro/src/web/: routes_login.rs
web_development/example2/rust-axum-intro/tests/: quick_dev.rs
web_development/frontend1/: package-lock.json
webapi/: Cargo.toml  README.md
(+12 files in other folders)
