[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
tower-http = { version = "0.5.1", features = ["fs"] }
serde ={ version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
anyhow = "1.0.80"
httpc-test = "0.1.9"
